--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@sentry/nextjs": "^8.17.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "mini-svg-data-uri": "^1.4.4",
